<resources>
    <string name="app_name">Travel pass</string>
    <string name="welcome">Welcome</string>
    <string name="email_address">Email Address</string>
    <string name="password">Password</string>
    <string name="please_login_here">please login here</string>
    <string name="remember_me">Remember me</string>
    <string name="enter_your_details">Enter your details!</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="registration">Registration</string>
    <string name="last_name">Last Name</string>
    <string name="first_name">First Name</string>
    <string name="login">Login</string>
    <string name="register_now">Register Now</string>
    <string name="hold_on_tight">Hold ON Tight</string>
    <string name="we_are_directing_you">We are directing you</string>
    <string name="opening_upi_app">Opening UPI App</string>
    <string name="do_not_press_back_button">Do not press back button</string>
    <string name="forgot_password">Forgot password</string>
    <string name="we_are_processing_payment">We are processing payment</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="tickets">Tickets</string>
    <string name="settings">Settings</string>
    <string name="history">History</string>
    <string name="home">Home</string>
    <string name="check">Check</string>
    <string name="date">Date :</string>
    <string name="to">To :</string>
    <string name="from">From :</string>
    <string name="check_schedule">Check Schedule</string>
    <string name="cab">Cab</string>
    <string name="flight">Flight</string>
    <string name="metro">Metro</string>
    <string name="bus">Bus</string>
    <string name="get_your_qr">Get your QR</string>
    <string name="buy_qr">Buy QR</string>
    <string name="recharge_your_qr">Recharge your QR</string>
    <string name="top_ups">Top Ups</string>
    <string name="todo">TODO</string>
    <string name="enter_source">Enter Source</string>
    <string name="enter_destination">Enter Destination</string>
    <string name="enter_journey_date">DD/MM/YYYY</string>
    <string name="enter_amount">Enter Amount</string>
    <string name="enter_unique_qr_id_code">Enter unique QR ID code</string>
    <string name="payment_method">Payment Method</string>
    <string name="proceed">Proceed</string>
    <string name="bus_recharge">BUS RECHARGE</string>
</resources>