<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <!-- TODO: Update blank fragment layout -->


    <FrameLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/imageView4"
            android:layout_width="match_parent"
            android:layout_height="216dp"
            android:contentDescription="@string/todo"
            android:src="@drawable/photo" />
    </FrameLayout>

    <TextView
        android:id="@+id/textView14"
        android:layout_width="99dp"
        android:layout_height="32dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="216dp"
        android:text="@string/top_ups"
        android:textAlignment="textStart"
        android:textColor="#000000"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView15"
        android:layout_width="103dp"
        android:layout_height="24dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="248dp"
        android:text="@string/recharge_your_qr"
        android:textAlignment="center"
        android:textColor="#7A000000"
        android:textSize="12sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/bus_top_up"
        android:layout_width="59dp"
        android:layout_height="56dp"
        android:layout_marginStart="28dp"
        android:layout_marginTop="279dp"
        android:background="@drawable/rectangle"
        android:contentDescription="@string/bus"
        android:src="@drawable/bus"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:clickable="true"
        android:focusable="true" />

    <ImageView
        android:id="@+id/imageView6"
        android:layout_width="59dp"
        android:layout_height="56dp"
        android:layout_marginStart="116dp"
        android:layout_marginTop="279dp"
        android:background="@drawable/rectangle"
        android:contentDescription="@string/metro"
        android:src="@drawable/t_metro"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView7"
        android:layout_width="59dp"
        android:layout_height="56dp"
        android:layout_marginStart="205dp"
        android:layout_marginTop="279dp"
        android:background="@drawable/rectangle"
        android:contentDescription="@string/flight"
        android:src="@drawable/t_flight"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView8"
        android:layout_width="59dp"
        android:layout_height="56dp"
        android:layout_marginStart="293dp"
        android:layout_marginTop="279dp"
        android:background="@drawable/rectangle"
        android:contentDescription="@string/cab"
        android:src="@drawable/t_cab"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView16"
        android:layout_width="92dp"
        android:layout_height="31dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="344dp"
        android:text="@string/buy_qr"
        android:textAlignment="textStart"
        android:textColor="#000000"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView17"
        android:layout_width="72dp"
        android:layout_height="17dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="378dp"
        android:text="@string/get_your_qr"
        android:textAlignment="textStart"
        android:textColor="#7A000000"
        android:textSize="12sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView9"
        android:layout_width="59dp"
        android:layout_height="56dp"
        android:layout_marginStart="28dp"
        android:layout_marginTop="405dp"
        android:background="@drawable/rectangle"
        android:contentDescription="@string/bus"
        android:src="@drawable/bus"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView10"
        android:layout_width="59dp"
        android:layout_height="56dp"
        android:layout_marginStart="116dp"
        android:layout_marginTop="405dp"
        android:background="@drawable/rectangle"
        android:contentDescription="@string/metro"
        android:src="@drawable/metro"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView11"
        android:layout_width="59dp"
        android:layout_height="56dp"
        android:layout_marginStart="205dp"
        android:layout_marginTop="405dp"
        android:background="@drawable/rectangle"
        android:contentDescription="@string/flight"
        android:src="@drawable/flight"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView12"
        android:layout_width="59dp"
        android:layout_height="56dp"
        android:layout_marginStart="293dp"
        android:layout_marginTop="405dp"
        android:background="@drawable/rectangle"
        android:contentDescription="@string/cab"
        android:src="@drawable/cab"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView18"
        android:layout_width="188dp"
        android:layout_height="32dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="476dp"
        android:text="@string/check_schedule"
        android:textAlignment="textStart"
        android:textColor="#000000"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView19"
        android:layout_width="45dp"
        android:layout_height="28dp"
        android:layout_marginStart="56dp"
        android:layout_marginTop="520dp"
        android:text="@string/from"
        android:textAlignment="textStart"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView20"
        android:layout_width="26dp"
        android:layout_height="24dp"
        android:layout_marginStart="64dp"
        android:layout_marginTop="570dp"
        android:text="@string/to"
        android:textAlignment="center"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView21"
        android:layout_width="46dp"
        android:layout_height="24dp"
        android:layout_marginStart="56dp"
        android:layout_marginTop="620dp"
        android:text="@string/date"
        android:textAlignment="center"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editTextTextPostalAddress"
        android:layout_width="225dp"
        android:layout_height="48dp"
        android:layout_marginTop="512dp"
        android:background="@drawable/custom_input"
        android:ems="10"
        android:hint="@string/enter_source"
        android:inputType="textPostalAddress"
        android:paddingStart="12dp"
        android:paddingEnd="12dp"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.537"
        app:layout_constraintStart_toEndOf="@+id/textView19"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="LabelFor,SpeakableTextPresentCheck" />

    <EditText
        android:id="@+id/editTextTextPostalAddress2"
        android:layout_width="225dp"
        android:layout_height="48dp"
        android:layout_marginTop="560dp"
        android:background="@drawable/custom_input"
        android:ems="10"
        android:hint="@string/enter_destination"
        android:inputType="textPostalAddress"
        android:paddingStart="12dp"
        android:paddingEnd="12dp"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.602"
        app:layout_constraintStart_toEndOf="@+id/textView20"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="LabelFor,SpeakableTextPresentCheck" />

    <EditText
        android:id="@+id/editTextDate"
        android:layout_width="226dp"
        android:layout_height="48dp"
        android:layout_marginTop="48dp"
        android:background="@drawable/custom_input"
        android:ems="10"
        android:hint="@string/enter_journey_date"
        android:inputType="date"
        android:paddingStart="12dp"
        android:paddingEnd="12dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.53"
        app:layout_constraintStart_toEndOf="@+id/textView21"
        app:layout_constraintTop_toTopOf="@+id/editTextTextPostalAddress2"
        tools:ignore="LabelFor,SpeakableTextPresentCheck" />

    <Button
        android:id="@+id/button2"
        android:layout_width="281dp"
        android:layout_height="48dp"
        android:layout_marginTop="666dp"
        android:backgroundTint="#7152F3"
        android:insetBottom="1dp"
        android:text="@string/check"
        android:textAlignment="center"
        android:textSize="17sp"
        android:textStyle="bold"
        android:typeface="normal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.571"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>