<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/textView3"
        android:layout_width="250dp"
        android:layout_height="0dp"
        android:layout_marginStart="35dp"
        android:layout_marginTop="58dp"
        android:layout_marginEnd="35dp"
        android:text="@string/registration"
        android:textColor="#070000"
        android:textSize="35sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.041"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="111dp"
        android:layout_height="24dp"
        android:layout_marginStart="38dp"
        android:layout_marginTop="112dp"
        android:text="@string/enter_your_details"
        android:textSize="13sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editTextText1"
        android:layout_width="320dp"
        android:layout_height="54dp"
        android:layout_marginStart="35dp"
        android:layout_marginTop="143dp"
        android:layout_marginEnd="35dp"
        android:paddingStart="12dp"
        android:paddingEnd="12dp"
        android:background="@drawable/custom_input"
        android:ems="10"
        android:hint="@string/first_name"
        android:inputType="text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editTextText2"
        android:layout_width="320dp"
        android:layout_height="54dp"
        android:layout_marginStart="35dp"
        android:layout_marginTop="213dp"
        android:layout_marginEnd="35dp"
        android:paddingStart="12dp"
        android:paddingEnd="12dp"
        android:background="@drawable/custom_input"
        android:ems="10"
        android:hint="@string/last_name"
        android:inputType="text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editTextTextEmailAddressR"
        android:layout_width="320dp"
        android:layout_height="54dp"
        android:layout_marginStart="35dp"
        android:layout_marginTop="288dp"
        android:layout_marginEnd="35dp"
        android:background="@drawable/custom_input"
        android:drawableStart="@drawable/email"
        android:drawablePadding="12dp"
        android:ems="10"
        android:hint="@string/email_address"
        android:inputType="textEmailAddress"
        android:paddingStart="12dp"
        android:paddingEnd="12dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.476"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <EditText
        android:id="@+id/editTextTextPasswordR"
        android:layout_width="320dp"
        android:layout_height="54dp"
        android:layout_marginStart="35dp"
        android:layout_marginTop="352dp"
        android:layout_marginEnd="35dp"
        android:background="@drawable/custom_input"
        android:drawableStart="@drawable/lock"
        android:drawablePadding="12dp"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:paddingStart="12dp"
        android:paddingEnd="12dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.476"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editTextTextPasswordRC"
        android:layout_width="320dp"
        android:layout_height="54dp"
        android:layout_marginStart="35dp"
        android:layout_marginTop="423dp"
        android:layout_marginEnd="35dp"
        android:background="@drawable/custom_input"
        android:drawableStart="@drawable/lock"
        android:drawablePadding="12dp"
        android:ems="10"
        android:hint="@string/confirm_password"
        android:inputType="textPassword"
        android:paddingStart="12dp"
        android:paddingEnd="12dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.476"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button3"
        android:layout_width="320dp"
        android:layout_height="54dp"
        android:layout_marginStart="35dp"
        android:layout_marginTop="492dp"
        android:layout_marginEnd="35dp"
        android:text="@string/register_now"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.476"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button4"
        android:layout_width="320dp"
        android:layout_height="54dp"
        android:layout_marginStart="35dp"
        android:layout_marginTop="556dp"
        android:layout_marginEnd="35dp"
        android:backgroundTint="#C9D3CEDD"
        android:text="@string/login"
        android:textColor="#7152F3"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.476"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>