<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/work_bg">

    <TextView
        android:id="@+id/textView0"
        android:layout_width="203dp"
        android:layout_height="54dp"
        android:layout_marginStart="104dp"
        android:layout_marginTop="192dp"
        android:layout_marginEnd="104dp"
        android:lineSpacingExtra="14sp"
        android:text="@string/welcome"
        android:fontFamily="monospace"
        android:textAlignment="center"
        android:textColor="#000000"
        android:textSize="30sp"
        android:textStyle="bold"
        android:typeface="normal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editTextTextEmailAddress1"
        android:layout_width="320dp"
        android:layout_height="54dp"
        android:layout_marginStart="35dp"
        android:layout_marginTop="288dp"
        android:layout_marginEnd="35dp"
        android:background="@drawable/custom_input"
        android:drawableStart="@drawable/email"
        android:drawablePadding="12dp"
        android:ems="10"
        android:hint="@string/email_address"
        android:inputType="textEmailAddress"
        android:paddingStart="12dp"
        android:paddingEnd="12dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.476"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editTextTextPassword2"
        android:layout_width="320dp"
        android:layout_height="54dp"
        android:layout_marginStart="35dp"
        android:layout_marginTop="352dp"
        android:layout_marginEnd="35dp"
        android:background="@drawable/custom_input"
        android:drawableStart="@drawable/lock"
        android:drawablePadding="12dp"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:paddingStart="12dp"
        android:paddingEnd="12dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.476"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <CheckBox
        android:id="@+id/checkBox"
        android:layout_width="130dp"
        android:layout_height="48dp"
        android:layout_marginStart="35dp"
        android:layout_marginTop="404dp"
        android:text="@string/remember_me"
        app:layout_constraintEnd_toStartOf="@+id/textView2"
        app:layout_constraintHorizontal_bias="0.016"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="35dp"
        android:layout_marginTop="420dp"
        android:layout_marginEnd="35dp"
        android:text="@string/forgot_password"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.944"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/login_button1"
        android:layout_width="320dp"
        android:layout_height="54dp"
        android:layout_marginStart="35dp"
        android:layout_marginTop="492dp"
        android:layout_marginEnd="35dp"
        android:text="@string/login"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.476"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/register_button"
        android:layout_width="320dp"
        android:layout_height="54dp"
        android:layout_marginStart="35dp"
        android:layout_marginTop="556dp"
        android:layout_marginEnd="35dp"
        android:backgroundTint="#C9D3CEDD"
        android:text="@string/register_now"
        android:textColor="#7152F3"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.476"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>