<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/textView"
        android:layout_width="154dp"
        android:layout_height="27dp"
        android:layout_marginStart="111dp"
        android:layout_marginTop="268dp"
        android:layout_marginEnd="111dp"
        android:text="@string/hold_on_tight"
        android:textAlignment="center"
        android:textColor="#000000"
        android:textSize="21sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.47"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="125dp"
        android:layout_height="24dp"
        android:layout_marginStart="137dp"
        android:layout_marginTop="296dp"
        android:layout_marginEnd="137dp"
        android:text="@string/we_are_directing_you"
        android:textAlignment="center"
        android:textColor="#7A000000"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="122dp"
        android:layout_height="24dp"
        android:layout_marginStart="134dp"
        android:layout_marginTop="416dp"
        android:layout_marginEnd="134dp"
        android:text="@string/opening_upi_app"
        android:textAlignment="center"
        android:textColor="#AD7152F3"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="144dp"
        android:layout_height="24dp"
        android:layout_marginStart="123dp"
        android:layout_marginTop="508dp"
        android:layout_marginEnd="123dp"
        android:text="@string/do_not_press_back_button"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textColor="#7A000000"
        android:textSize="12sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="96dp"
        android:layout_height="96dp"
        android:layout_marginStart="147dp"
        android:layout_marginTop="320dp"
        android:layout_marginEnd="147dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/compass_north" />
</androidx.constraintlayout.widget.ConstraintLayout>